roles/ks-core/prepare/files/ks-init/network.kubesphere.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: network.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDakNDQWZJQ0NRQ3NJZ1N5bFRIMTNUQU5CZ2txaGtpRzl3MEJBUXNGQURCSE1Rc3dDUVlEVlFRR0V3SkQKVGpFTE1Ba0dBMVVFQ0F3Q1NFSXhDekFKQmdOVkJBb01BbEZETVI0d0hBWURWUVFEREJWcmN5MWpiMjUwY205cwpiR1Z5TFcxaGJtRm5aWEl3SGhjTk1qQXdOekkzTVRRek5UVTRXaGNOTkRjeE1qRXpNVFF6TlRVNFdqQkhNUXN3CkNRWURWUVFHRXdKRFRqRUxNQWtHQTFVRUNBd0NTRUl4Q3pBSkJnTlZCQW9NQWxGRE1SNHdIQVlEVlFRRERCVnIKY3kxamIyNTBjbTlzYkdWeUxXMWhibUZuWlhJd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFERDc0 [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-network-kubesphere-io-v1alpha1
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: validating-network.kubesphere.io
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector: {}
    rules:
      - apiGroups:
          - network.kubesphere.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ippools
        scope: '*'
    sideEffects: None
    timeoutSeconds: 30
