roles/ks-core/prepare/files/ks-init/quota.kubesphere.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: resourcesquotas.quota.kubesphere.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmekNDQW1lZ0F3SUJBZ0lVQ1Z6TFZGS3R0WGhtSE51dm5USWJ1bVJxVUhvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1R6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtoQ01STXdFUVlEVlFRS0RBcExWVUpGVTFCSQpSVkpGTVI0d0hBWURWUVFEREJWcmN5MWpiMjUwY205c2JHVnlMVzFoYm1GblpYSXdIaGNOTWpBd09ESTNNVFkxCk1ESTFXaGNOTkRnd01URXpNVFkxTURJMVdqQlBNUXN3Q1FZRFZRUUdFd0pEVGpFTE1Ba0dBMVVFQ0F3Q1NFSXgKRXpBUkJnTlZCQW9NQ2t0VlFrVlRVRWhGVWtVeEhqQWNCZ05WQkFNTUZXdHpMV052Ym5SeWIyeHNaWEl0YldGdQpZV2RsY2pDQ0FT [...]
      service:
        name: ks-controller-manager
        namespace: kubesphere-system
        path: /validate-quota-kubesphere-io-v1alpha2
        port: 443
    failurePolicy: Ignore
    matchPolicy: Exact
    name: resourcesquotas.quota.kubesphere.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - '*'
        apiVersions:
          - '*'
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
